implemented aggregate api
